--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 
 
 
-
+    <ul>
+        <div class="header">
+   
+   <li> <a href="index.html">HOME</a></li> 
+       <li><a href="about us.html">ABOUT US</a></li> 
+      <li> <a href="contact us.html" class="active">CONTACT US</a></li> 
+      <li><a href="blog.html">BLOG</a></li> 
+      <li> <a href="gallery.html">GALLERY</a>  </li>
+    </div>
+   
+   </ul>
 
 
 
